Add overloaded put and delete methods to delete/get many